# Assignment_3_Team1

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  main.py  multimodal_report_generation.ipynb  pyproject.toml
backend/app/: main.py  utils.py
backend/app/config/: settings.py
backend/app/routes/: helpers.py  publications_routes.py  rag.py  summary_routes.py
backend/app/services/: PublicationService.py  document_service.py  mongo.py  pinecone_service.py  rag_service.py  report_service.py  snowflake.py  table_page_1_1.csv
backend/config/: settings.py
backend/controllers/: s3_controller.py
backend/models/: schemas.py
backend/routes/: s3_routes.py
backend/services/: s3_service.py
frontend/: .env.example  app.py  pyproject.toml
frontend/app_pages/: document_actions_page.py  documents_page.py  home.py  home_page.py
frontend/pages/: documents_page.py
prototyping/: Report Gen.ipynb
